fixed notification sitting behind the aside

--- a/src/assets/stylesheets/modules/_aside.scss
+++ b/src/assets/stylesheets/modules/_aside.scss
@@ -4,6 +4,7 @@
   right: 0;
   top: $headerHeight;
   bottom: 0;
+  position: fixed;
   float: right;
   max-width: 450px;
   min-width: 250px;
